--- a/my-project/src/layouts/BasicLayout.less
+++ b/my-project/src/layouts/BasicLayout.less
@@ -283,3 +283,9 @@
 .ant-col-xl-4 {
   width: 25% !important;
 }
+.ant-col-22 {
+  width: 90% !important;
+}
+.ant-col-2 {
+  width: 10% !important;
+}
