--- a/my-project/src/components/FormGenerator/styles/home.less
+++ b/my-project/src/components/FormGenerator/styles/home.less
@@ -11,7 +11,7 @@
   height: calc(100vh - 64px);
   overflow-y: auto;
   padding: 0px 12px 0px 12px;
-  box-sizing: border-box;
+
   .components-item {
     display: inline-block;
     width: 48%;
@@ -27,7 +27,7 @@
   height: calc(100vh - 120px);
   max-height: calc(100vh - 120px);
   overflow-y: auto;
-  margin: 12px 0 12px 0;
+  margin: 12px;
 }
 
 .components-body {
@@ -90,7 +90,7 @@
   box-sizing: border-box;
   background: #fff;
   padding: 24px;
-  min-height: calc(100vh - 64px - 24px - 69px);
+  min-height: 640px;
 }
 
 .drawing-board {
